--- a/assets/login_sigup.css
+++ b/assets/login_sigup.css
@@ -13,18 +13,18 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: #4070f4;
+    background: url(.png), linear-gradient(113.68deg, #007458 1.13%, rgba(122, 16, 124, 0) 95.52%);
 }
 
-.nav {
-    height: 100px;
+.danger-text {
+    color: red;
 }
 
 .container {
     position: relative;
     max-width: 600px;
     width: 100%;
-    background: #4070f4;
+    background: url(.png), linear-gradient(113.68deg, #007458 1.13%, rgba(122, 16, 124, 0) 95.52%);
     border-radius: 10px;
     box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
     overflow: hidden;
@@ -51,6 +51,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
+
 }
 
 .container.active .login {
@@ -84,17 +85,6 @@ body {
     color: #EEEEEE;
 
 }
-
-/* .form .title::before {
-    content: '';
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    height: 3px;
-    width: 30px;
-    background-color: #4070f4;
-    border-radius: 25px;
-} */
 
 .form .input-field {
     position: relative;
@@ -211,6 +201,10 @@ body {
     opacity: .7;
 }
 
+.form .danger-button input {
+    color: red;
+}
+
 .button input:hover {
     opacity: 1;
     background-color: black;
@@ -243,9 +237,55 @@ body {
     left: 0;
     top: 0;
     position: absolute;
-    width: 110px;
     height: 100%;
     background: #e67e22;
     border-radius: 30px;
     transition: .5s;
+}
+
+.mg-t86 {
+    margin-top: 86px;
+}
+
+.header {
+    display: flex;
+    justify-content: space-between;
+    gap: 80%;
+    width: 80%;
+}
+
+.bg-focus {
+    background-color: #007458;
+}
+
+.nav {
+    display: flex;
+    flex-direction: row;
+    justify-content: right;
+    align-items: center;
+    background-color: black;
+    border-radius: 100px;
+    margin: 20px 0;
+    /* padding: 10px; */
+}
+
+.nav .nav-item {
+    /* background-color: red; */
+    border: none;
+    border-radius: 100px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    width: auto;
+    min-width: 80px;
+    opacity: .7;
+    padding: 10px;
+}
+
+.nav-item a {
+    text-decoration: none;
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 17px;
+    font-weight: 500;
+    letter-spacing: 1px;
 }
